// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 404 page 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa gokHPD"
  />
</DocumentFragment>
`;

exports[`should render Apollo page 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa gokHPD"
  />
</DocumentFragment>
`;

exports[`should render Saga page 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa gokHPD"
  />
</DocumentFragment>
`;

exports[`should render Top page 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa gokHPD"
  >
    <p>
      top
    </p>
  </div>
</DocumentFragment>
`;
